--- a/mbed_app.json
+++ b/mbed_app.json
@@ -1,5 +1,5 @@
 {
-    "macros": ["DEVICE_WIFI_AP=1"],
+    "macros": ["DEVICE_WIFI_AP=1", "USE_TCP=1"],
     "config": {
         "wifi-ssid": {
             "help": "AP SSID",
