--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,9 @@ jobs:
               apt-get -y update
               apt-get -y install libc6:i386 libncurses5:i386 libstdc++6:i386
               apt-get -y install wget
+              apt-get -y install bzip2
               wget -O gcc_arm.tar.bz2 "https://developer.arm.com/-/media/Files/downloads/gnu-rm/5_3-2016q1/gccarmnoneeabi532016q120160330linuxtar.bz2?revision=417e2623-c259-4a12-aacc-c87200b569c7?product=GNU%20Arm%20Embedded%20Toolchain,32-bit,,Linux,5-2016-q1-update"
-              tar -jxf ./gcc_arm.tar.bz2
+              tar -jxvf gcc_arm.tar.bz2
               echo 'export PATH="/opt/gcc-arm-none-eabi-5_3-2016q1/bin:$PATH"' >> $BASH_ENV
       
       - run:
