--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,8 @@ jobs:
               mbed config --list
               mbed toolchain -G GCC_ARM
               mbed target -G UBLOX_EVK_ODIN_W2
+              pwd
+              ls
 
       - run:
           name: Compile
