--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
               mbed config --list
               mbed toolchain -G GCC_ARM
               mbed target -G UBLOX_EVK_ODIN_W2
-              mbed init .
+              mbed new .
               mbed deploy
 
       - run:
