reduce packet size and increase stdio baud rate

--- a/mbed/mbed_app.json
+++ b/mbed/mbed_app.json
@@ -25,5 +25,10 @@
             "help": "WiFi Password",
             "value": "\"furuta123\""
         }
+    },
+    "target_overrides": {
+        "*": {
+            "platform.stdio-baud-rate": 115200
+        }
     }
 }
