motor: add code for reading motor speed, but don't use just yet

--- a/mbed/motor_controller/mbed_app.json
+++ b/mbed/motor_controller/mbed_app.json
@@ -1,4 +1,8 @@
 {
+    "macros":
+    [
+        "USE_SPEED_THRESHOLD=1"
+    ],
     "target_overrides": {
         "*": {
             "platform.stdio-baud-rate": 115200
