motor: configure mbed to use only HSI, and compute motor speed

--- a/mbed/motor_controller/mbed_app.json
+++ b/mbed/motor_controller/mbed_app.json
@@ -4,7 +4,7 @@
             "platform.stdio-baud-rate": 115200
         },
         "NUCLEO_L476RG" : {
-            "target.clock_source": "USE_PLL_HSE_EXTC|USE_PLL_HSI"
+            "target.clock_source": "USE_PLL_HSI"
         }
     }
 }
