--- a/motor_controller_ti/motor_controller/.project
+++ b/motor_controller_ti/motor_controller/.project
@@ -26,6 +26,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>IQmath_fpu32.lib</name>
+			<type>1</type>
+			<location>C:/ti/c2000/C2000Ware_3_01_00_00/libraries/math/IQmath/c28/lib/IQmath_fpu32.lib</location>
+		</link>
+		<link>
 			<name>driverlib.lib</name>
 			<type>1</type>
 			<location>C:/ti/c2000/C2000Ware_3_01_00_00/driverlib/f2837xd/driverlib/ccs/Debug/driverlib.lib</location>
@@ -35,6 +40,10 @@
 		<variable>
 			<name>C2000WARE_DLIB_ROOT</name>
 			<value>$%7BCOM_TI_C2000WARE_SOFTWARE_PACKAGE_INSTALL_DIR%7D/driverlib/f2837xd/driverlib</value>
+		</variable>
+		<variable>
+			<name>C2000WARE_IQMATH_ROOT</name>
+			<value>$%7BCOM_TI_C2000WARE_SOFTWARE_PACKAGE_INSTALL_DIR%7D/libraries/math/IQmath</value>
 		</variable>
 	</variableList>
 </projectDescription>
