--- a/mbed/system_controller/mbed_app.json
+++ b/mbed/system_controller/mbed_app.json
@@ -30,7 +30,7 @@
         }
     },
     "target_overrides": {
-        "*": {
+        "UBLOX_EVK_ODIN_W2": {
             "platform.stdio-baud-rate": 115200
         }
     }
