matlab: characterize pololu motor
matlab: get baseline kalman filter working with 500us cycle time

matlab: add script to calculate kalman gain

matlab: vary initial angles and test Kalman filter's efficiency

Get kalman filter script working

ti: add build configurations instead of macros

ti: add paranthesis for macro

ti: clean up code and move interrupts to seperate file

ti: add SPI GPIO config

ti: get SPI working

ti: add dsp library and make interrupts short

ti: get SPI to work with ESP32

ti: correct bit rate and add SPIB GPIO configs

ti: use pragma unroll for for loop

ti: remove redundant timer code

ti: add timer counter

ti: add code for RLS self calibration

ti: fix waitCount bug

ti: get RLS position data

ti: remove RLS speed command

ti: use 16-bit word size instead of 8-bit for RLS communication

ti: fix RLS spi issues by reducing comm speed

ti: modify offset value and provide deadband for ADC PPB reading

ti: move timer functions to it's own header file

ti: remove CLA task 2

esp: add udp server

ti: get wifi data valid flag

esp: add build tools

esp: modify git hash

esp: fix build issues

esp: change build options

ti/esp: change delay threshold

add wireless PCB design

esp: add basic station code

esp: get station code working

esp: fix SPI DMA warning:

esp: optimize UDP for throughput

change build flag for CLA file

organize current variables into a struct

add protection for 3.3V source detection

add comments

make permissives into a union

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,10 @@ matlab/solidworks_model/slprj/
 .hg/
 .temp/
 *.mbed
-
+esp/*/build/
+wireless_pcb_design/Project Outputs/
+wireless_pcb_design/Project Outputs for WirelessPCB/
+wireless_pcb_design/History/
+wireless_pcb_design/Project Logs for WirelessPCB/
+wireless_pcb_design/debug.log
+wireless_pcb_design/__Previews
