--- a/motor_controller_ti/motor_controller/.gitignore
+++ b/motor_controller_ti/motor_controller/.gitignore
@@ -6,3 +6,6 @@
 /CPU1_FLASH__opt_for_speed__4/
 /CPU1_FLASH__opt_for_speed__5/
 /CPU1_RAM/
+/MOTOR_CHARACTERIZATION/
+/TEST_MODE/
+/RLS_SELF_CALIBRATION/
