--- a/motor_controller_ti/motor_controller/.project
+++ b/motor_controller_ti/motor_controller/.project
@@ -31,6 +31,11 @@
 			<location>C:/ti/c2000/C2000Ware_3_01_00_00/libraries/math/IQmath/c28/lib/IQmath_fpu32.lib</location>
 		</link>
 		<link>
+			<name>c28x_fpu_dsp_library.lib</name>
+			<type>1</type>
+			<locationURI>PARENT-6-PROJECT_LOC/ti/c2000/C2000Ware_3_01_00_00/libraries/dsp/FPU/c28/lib/c28x_fpu_dsp_library.lib</locationURI>
+		</link>
+		<link>
 			<name>driverlib.lib</name>
 			<type>1</type>
 			<location>C:/ti/c2000/C2000Ware_3_01_00_00/driverlib/f2837xd/driverlib/ccs/Debug/driverlib.lib</location>
@@ -40,6 +45,10 @@
 		<variable>
 			<name>C2000WARE_DLIB_ROOT</name>
 			<value>$%7BCOM_TI_C2000WARE_SOFTWARE_PACKAGE_INSTALL_DIR%7D/driverlib/f2837xd/driverlib</value>
+		</variable>
+		<variable>
+			<name>C2000WARE_DSP_ROOT</name>
+			<value>$%7BCOM_TI_C2000WARE_SOFTWARE_PACKAGE_INSTALL_DIR%7D/libraries/dsp</value>
 		</variable>
 		<variable>
 			<name>C2000WARE_IQMATH_ROOT</name>
