--- a/motor_controller_ti/motor_controller/.settings/org.eclipse.core.resources.prefs
+++ b/motor_controller_ti/motor_controller/.settings/org.eclipse.core.resources.prefs
@@ -55,3 +55,17 @@ encoding//CPU1_RAM/objects.mk=UTF-8
 encoding//CPU1_RAM/sources.mk=UTF-8
 encoding//CPU1_RAM/subdir_rules.mk=UTF-8
 encoding//CPU1_RAM/subdir_vars.mk=UTF-8
+encoding//RLS_SELF_CALIBRATION/device/subdir_rules.mk=UTF-8
+encoding//RLS_SELF_CALIBRATION/device/subdir_vars.mk=UTF-8
+encoding//RLS_SELF_CALIBRATION/makefile=UTF-8
+encoding//RLS_SELF_CALIBRATION/objects.mk=UTF-8
+encoding//RLS_SELF_CALIBRATION/sources.mk=UTF-8
+encoding//RLS_SELF_CALIBRATION/subdir_rules.mk=UTF-8
+encoding//RLS_SELF_CALIBRATION/subdir_vars.mk=UTF-8
+encoding//TEST_MODE/device/subdir_rules.mk=UTF-8
+encoding//TEST_MODE/device/subdir_vars.mk=UTF-8
+encoding//TEST_MODE/makefile=UTF-8
+encoding//TEST_MODE/objects.mk=UTF-8
+encoding//TEST_MODE/sources.mk=UTF-8
+encoding//TEST_MODE/subdir_rules.mk=UTF-8
+encoding//TEST_MODE/subdir_vars.mk=UTF-8
