--- a/motor_controller_ti/motor_controller/furuta_controller_v2/.gitignore
+++ b/motor_controller_ti/motor_controller/furuta_controller_v2/.gitignore
@@ -1,2 +1,7 @@
 /CPU1_RAM/
 /CPU1_FLASH/
+/CPU1_FLASH__opt_for_speed__0/
+/CPU1_FLASH__opt_for_speed__1/
+/CPU1_FLASH__opt_for_speed__2/
+/CPU1_FLASH__opt_for_speed__4/
+/CPU1_FLASH__opt_for_speed__5/
