--- a/motor_controller_ti/motor_controller/furuta_controller_v2/.settings/org.eclipse.core.resources.prefs
+++ b/motor_controller_ti/motor_controller/furuta_controller_v2/.settings/org.eclipse.core.resources.prefs
@@ -9,6 +9,84 @@ encoding//CPU1_FLASH/kalman_filter_lqr_lib/tests/subdir_rules.mk=UTF-8
 encoding//CPU1_FLASH/kalman_filter_lqr_lib/tests/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/makefile=UTF-8
 encoding//CPU1_FLASH/objects.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/controls/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/controls/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/device/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/device/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/kalman_filter_lqr_lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/kalman_filter_lqr_lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/makefile=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/objects.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/peripheral_initializations/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/peripheral_initializations/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/sources.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__0/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/controls/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/controls/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/device/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/device/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/kalman_filter_lqr_lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/kalman_filter_lqr_lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/makefile=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/objects.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/peripheral_initializations/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/peripheral_initializations/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/sources.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__1/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/controls/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/controls/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/device/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/device/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/kalman_filter_lqr_lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/kalman_filter_lqr_lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/makefile=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/objects.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/peripheral_initializations/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/peripheral_initializations/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/sources.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__2/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/controls/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/controls/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/device/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/device/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/kalman_filter_lqr_lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/kalman_filter_lqr_lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/makefile=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/objects.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/peripheral_initializations/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/peripheral_initializations/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/sources.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__3/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/controls/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/controls/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/device/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/device/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/kalman_filter_lqr_lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/kalman_filter_lqr_lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/makefile=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/objects.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/peripheral_initializations/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/peripheral_initializations/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/sources.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__4/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/controls/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/controls/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/device/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/device/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/kalman_filter_lqr_lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/kalman_filter_lqr_lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/makefile=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/objects.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/peripheral_initializations/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/peripheral_initializations/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/sources.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/optimizerAssistant/opt_for_speed__5/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/peripheral_initializations/subdir_rules.mk=UTF-8
 encoding//CPU1_FLASH/peripheral_initializations/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/sources.mk=UTF-8
