Add basic RLS device comms

--- a/motor_controller_ti/motor_controller/furuta_controller_v2/.settings/org.eclipse.core.resources.prefs
+++ b/motor_controller_ti/motor_controller/furuta_controller_v2/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,8 @@ encoding//CPU1_FLASH/controls/subdir_rules.mk=UTF-8
 encoding//CPU1_FLASH/controls/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/device/subdir_rules.mk=UTF-8
 encoding//CPU1_FLASH/device/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH/device_comms/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/device_comms/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/kalman_filter_lqr_lib/subdir_rules.mk=UTF-8
 encoding//CPU1_FLASH/kalman_filter_lqr_lib/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/kalman_filter_lqr_lib/tests/subdir_rules.mk=UTF-8
