Add C2000 comms and clean up

--- a/esp/espnow/main/CMakeLists.txt
+++ b/esp/espnow/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c" "espnow_task.c" "mps_task.c"
+idf_component_register(SRCS "main.c" "espnow_task.c" "mps_task.c" "c2000_comms_task.c"
                     INCLUDE_DIRS ".")
