Use complementary PWM for DRV8256P and bring up DAC driver

--- a/motor_controller_ti/motor_controller/furuta_controller_v2/.cproject
+++ b/motor_controller_ti/motor_controller/furuta_controller_v2/.cproject
@@ -164,6 +164,7 @@
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/peripheral_initializations"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/controls"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/motor_control"/>
+									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/drivers"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/kalman_filter_lqr_lib"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/device_comms"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
