Add single and double pendulum configs

--- a/motor_controller_ti/motor_controller/furuta_controller_v2/.gitignore
+++ b/motor_controller_ti/motor_controller/furuta_controller_v2/.gitignore
@@ -1,5 +1,7 @@
 /CPU1_RAM/
 /CPU1_FLASH/
+/SINGLE_PENDULUM/
+/DOUBLE_PENDULUM/
 /CPU1_FLASH__opt_for_speed__0/
 /CPU1_FLASH__opt_for_speed__1/
 /CPU1_FLASH__opt_for_speed__2/
